# Sklearn-Freezer

./: .gitignore  README.md  pyproject.toml
example/: basic_compiler_test.py  benchmark.py  simple_compile.py  sklearn_model_benchmark.py
sklearn_freezer/: __init__.py
sklearn_freezer/backend/: __init__.py  c_compiler.py  core.py  cython_compiler.py  python_compiler.py  utils.py
sklearn_freezer/codegen/: __init__.py  decision_tree.py  decision_tree_classifier.py  forest_classifier.py  random_forest.py
sklearn_freezer/models/: __init__.py  decision_tree.py  random_forest.py
